--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^2.0.1",
+    "express-session": "^1.13.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "morgan": "^1.7.0"
