--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/eddiemoore/angular-spotify",
   "dependencies": {
     "angular-local-storage": "^0.2.6",
+    "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
