--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.10",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
